@@ -11,6 +11,8 @@ import org.springframework.hateoas.EntityModel;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 
@@ -20,17 +22,20 @@ import java.util.stream.Collectors;
 public class CustomerController {
     private final CustomerService customerService;
     private final CustomerDtoAssembler customerDtoAssembler;
-
     private final CustomerMapper customerMapper;
 
     @GetMapping("/{id}")
     public ResponseEntity<EntityModel<CustomerDto>> getCustomer(@PathVariable("id") String id) {
-        return ResponseEntity.of(this.customerService.getCustomer(id).map(customerMapper::customerToCustomerDto).map(customerDtoAssembler::toModel));
+        Optional<CustomerDto> fetchedCustomer = this.customerService
+                .getCustomer(id)
+                .map(customerMapper::customerToCustomerDto);
+        return ResponseEntity.of(fetchedCustomer.map(customerDtoAssembler::toModel));
     }
 
     @PostMapping
     public ResponseEntity<EntityModel<CustomerDto>> createCustomer(@RequestBody CustomerDto customerDto) {
-        return ResponseEntity.ok(customerDtoAssembler.toModel(customerMapper.customerToCustomerDto(customerService.upsertCustomer(customerMapper.customerDtoToCustomer(customerDto)))));
+        CustomerDto createdCustomer = customerMapper.customerToCustomerDto(customerService.upsertCustomer(customerMapper.customerDtoToCustomer(customerDto)));
+        return ResponseEntity.ok(customerDtoAssembler.toModel(createdCustomer));
     }
 
     @DeleteMapping("/{id}")
@@ -41,6 +46,11 @@ public class CustomerController {
 
     @GetMapping
     public ResponseEntity<CollectionModel<EntityModel<CustomerDto>>> getAllCustomers() {
-        return ResponseEntity.ok(customerDtoAssembler.toCollectionModel(customerService.customers().stream().map(customerMapper::customerToCustomerDto).collect(Collectors.toList())));
+        List<CustomerDto> fetchedCustomers = customerService
+                .customers()
+                .stream()
+                .map(customerMapper::customerToCustomerDto)
+                .toList();
+        return ResponseEntity.ok(customerDtoAssembler.toCollectionModel(fetchedCustomers));
     }
 }
