@@ -15,6 +15,8 @@ import org.springframework.hateoas.EntityModel;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RestController
@@ -34,7 +36,8 @@ public class ShopController {
 
     @GetMapping("/{id}")
     public ResponseEntity<EntityModel<ShopDto>> getShop(@PathVariable("id") Long id) {
-        return ResponseEntity.of(shopService.getShop(id).map(shopMapper::shopToShopDto).map(shopDtoAssembler::toModel));
+        Optional<ShopDto> fetchedShop = shopService.getShop(id).map(shopMapper::shopToShopDto);
+        return ResponseEntity.of(fetchedShop.map(shopDtoAssembler::toModel));
     }
 
     @GetMapping("/{id}/items")
@@ -44,16 +47,19 @@ public class ShopController {
 
     @PostMapping
     public ResponseEntity<EntityModel<ShopDto>> createShop(ShopDto shopDto) throws ShopAlreadyExists {
-        return ResponseEntity.ok(shopDtoAssembler.toModel(shopMapper.shopToShopDto(shopService.createShop(shopMapper.shopDtoToShop(shopDto)))));
+        ShopDto createdShop = shopMapper.shopToShopDto(shopService.createShop(shopMapper.shopDtoToShop(shopDto)));
+        return ResponseEntity.ok(shopDtoAssembler.toModel(createdShop));
     }
 
     @PutMapping
     public ResponseEntity<EntityModel<ShopDto>> updateShop(ShopDto shopDto) {
-        return ResponseEntity.ok(shopDtoAssembler.toModel(shopMapper.shopToShopDto(shopService.updateShop(shopMapper.shopDtoToShop(shopDto)))));
+        ShopDto updatedShop = shopMapper.shopToShopDto(shopService.updateShop(shopMapper.shopDtoToShop(shopDto)));
+        return ResponseEntity.ok(shopDtoAssembler.toModel(updatedShop));
     }
 
     @GetMapping
     public CollectionModel<EntityModel<ShopDto>> getAllShops() {
-        return shopDtoAssembler.toCollectionModel(shopService.shops().stream().map(shopMapper::shopToShopDto).collect(Collectors.toList()));
+        List<ShopDto> fetchedShops = shopService.shops().stream().map(shopMapper::shopToShopDto).toList();
+        return shopDtoAssembler.toCollectionModel(fetchedShops);
     }
 }
